<resources>
    <string name="app_name">SplitemApp</string>
    <string name="line_separator_description">Line Separator</string>
    <string name="network_error">Check your network connection</string>
    <string name="generic_error">Oops! We detected a generic error</string>
    <string name="login_failed">Username or password invalid</string>
    <string name="account_exists">This account already exists</string>
    <string name="server_error">Oops! We detected a server error</string>
    <string name="ab_title">Title</string>
    <string name="ab_done">DONE</string>
    <string name="ab_back_description">Back</string>
    <string name="ab_menu_description">Menu</string>
    <string name="notification_new_project">has added you to project</string>
    <string name="notification_new_expense">has added an expense for project</string>
    <string name="notification_updated_project_cover">has updated cover for project</string>
    <string name="confirmation_logout">Are you sure you want to logout?</string>
    <string name="confirmation_archive_project">Are you sure you want to archive this project?</string>
    <string name="confirmation_archive_expense">Are you sure you want to archive this expense?</string>
    <string name="confirmation_positive_text">Yes</string>
    <string name="confirmation_negative_text">No</string>
    <string name="w_login">LOGIN</string>
    <string name="w_create_account">CREATE ACCOUNT</string>
    <string name="w_app_logo_description">Application Logo</string>
    <string name="li_username_hint">Username or Email</string>
    <string name="li_password_hint">Password</string>
    <string name="li_forgot_password">Forgot your password?</string>
    <string name="li_password_reset">Password reset</string>
    <string name="li_reset_password">Reset</string>
    <string name="li_log_in_button">Login</string>
    <string name="li_email_hint">Email address?</string>
    <string name="li_password_reset_sent">Reset request sent!</string>
    <string name="li_sign_up_question">Don\'t have an account?</string>
    <string name="li_sign_up_link">Sign up</string>
    <string name="s_avatar_description">User Avatar</string>
    <string name="s_name">Name</string>
    <string name="s_email">Email</string>
    <string name="s_title">Settings</string>
    <string name="s_profile">Profile</string>
    <string name="s_notifications">Notifications</string>
    <string name="s_help">Help</string>
    <string name="s_new_project">New project created</string>
    <string name="s_new_expense">New expense created</string>
    <string name="s_updated_cover">Updated project cover</string>
    <string name="s_ask_a_question">Have a question?</string>
    <string name="s_account">Account</string>
    <string name="s_change_password">Change password</string>
    <string name="s_current_password_hint">Current password</string>
    <string name="s_new_password_hint">New password</string>
    <string name="s_confirm_password_hint">Confirm password</string>
    <string name="s_password_changed">Password changed!</string>
    <string name="s_current_pass_invalid">Invalid current password</string>
    <string name="s_splitemapp_faq">SplitemApp FAQ</string>
    <string name="aaq_questions">Questions</string>
    <string name="aaq_question_description">Question Icon</string>
    <string name="aaq_send">Send</string>
    <string name="aaq_question_hint">What\'s up?</string>
    <string name="aaq_question_sent">Question sent!</string>
    <string name="aaq_question_get_back">We\'ll get back to you shortly :)</string>
    <string name="ca_avatar_description">Avatar</string>
    <string name="ca_name_hint">Name</string>
    <string name="ca_email_hint">E-mail</string>
    <string name="ca_password_hint">Password</string>
    <string name="ca_create_account_title">Create Account</string>
    <string name="ca_create_account_button">Create Account</string>
    <string name="ca_disclamer_1">By creating an account you agree to our</string>
    <string name="ca_disclamer_2">Privacy Policy and Terms of Use</string>
    <string name="ca_cancel_action">Cancel</string>
    <string name="h_project_cover_description">ProjectIcon</string>
    <string name="h_project_title">Title</string>
    <string name="h_project_total">Total: $</string>
    <string name="h_project_total_value">200.5</string>
    <string name="h_avatar_description">Avatar</string>
    <string name="h_name">Name</string>
    <string name="h_email">E-mail</string>
    <string name="h_archive_project">Archive</string>
    <string name="h_edit_project">Edit</string>
    <string name="h_new_list_button">New list of expenses</string>
    <string name="h_logout">LOGOUT</string>
    <string name="h_settings">SETTINGS</string>
    <string name="h_synchronize">SYNCHRONIZE</string>
    <string name="h_manage_contacts">MANAGE CONTACTS</string>
    <string name="h_action_edit">Edit</string>
    <string name="h_action_archive">Archive</string>
    <string name="h_empty_list_hint">You don\'t have any projects. Tap on the ADD button to start.</string>
    <string name="hpf_filter_description">Project Filter</string>
    <string name="hpf_title">Filter Projects</string>
    <string name="hpf_project_status">Project Status</string>
    <string name="hpf_project_type">Project Type</string>
    <string name="hpf_show_active">Active projects</string>
    <string name="hpf_show_archived">Archived projects</string>
    <string name="hpf_show_monthly">Monthly projects</string>
    <string name="hpf_show_one_time">One time projects</string>
    <string name="cp_new_title">New List</string>
    <string name="cp_edit_title">Edit List</string>
    <string name="cp_project_name">List Name</string>
    <string name="cp_project_type">List Type</string>
    <string name="cp_project_budget">List budget</string>
    <string name="cp_project_budget_optional">optional</string>
    <string name="cp_project_budget_value">0</string>
    <string name="cp_project_members_list">Member list</string>
    <string name="cp_project_add_people">Add more people</string>
    <string name="cp_new_project_button">Create list</string>
    <string name="cp_user_avatar_description">User Avatar</string>
    <string name="cp_user_name_placeholder">User Name</string>
    <string name="cp_user_email_placeholder">sample@splitemapp.com</string>
    <string name="ue_icon_description">User Expense Icon</string>
    <string name="ue_category_placeholder">Category</string>
    <string name="ue_date_placeholder">13 10 2014</string>
    <string name="ue_currency">$</string>
    <string name="ue_amount_placeholder">30,5%</string>
    <string name="ue_fullName_placeholder">Full Name</string>
    <string name="ue_fullAmount_placeholder">405.50</string>
    <string name="ue_action_archive">Archive</string>
    <string name="p_add_expense_button">Add an expense</string>
    <string name="p_cover_image_description">Cover Image</string>
    <string name="p_empty_list_hint">You don\'t have any spendings. Tap on the ADD button to start.</string>
    <string name="p_arrow_description">Arrow Image</string>
    <string name="p_more_option_edit">Edit</string>
    <string name="p_more_option_change_cover">Change cover</string>
    <string name="p_more_option_balance">Balance</string>
    <string name="p_more_option_archive">Archive</string>
    <string name="pef_filter_description">Filter</string>
    <string name="pef_title">Filter Expenses</string>
    <string name="pef_date">Date</string>
    <string name="pef_category">Category</string>
    <string name="e_new_title">New Expense</string>
    <string name="e_edit_title">Edit Expense</string>
    <string name="e_cancel_action">Cancel</string>
    <string name="e_save_action">Save</string>
    <string name="e_expenseamount_hint">Expense amount</string>
    <string name="e_currency">$</string>
    <string name="e_initial_expense_amount">0</string>
    <string name="pc_title">Project Contacts</string>
    <string name="pc_back_action">Back</string>
    <string name="pc_contacts">Contacts</string>
    <string name="pc_contact_fullname_placeholder">Full Name</string>
    <string name="pc_avatar_description">Contact Avatar</string>
    <string name="pc_status_description">Contact Status Icon</string>
    <string name="mc_title">Manage Contacts</string>
    <string name="mc_back_action">Back</string>
    <string name="mc_contacts">Contacts</string>
    <string name="mc_add_contact">Add Contact</string>
    <string name="mc_contact_added">Contact added!</string>
    <string name="mc_email_hint">Email address?</string>
    <string name="mc_search">Search</string>
    <string name="mc_not_found">User not found. Do you want to send an invite?</string>
    <string name="mc_invite">Invite</string>
    <string name="mc_invite_sent">Invite sent!</string>
    <string name="mc_synchronize_contacts_button">Synchronize Contacts</string>
    <string name="mc_avatar_description">Contact Avatar</string>
    <string name="mc_add_contact_description">Add Contact</string>
    <string name="b_title">Balance</string>
    <string name="b_monthly">Monthly</string>
    <string name="b_one_time">One Time</string>
    <string name="b_average">AVERAGE</string>
    <string name="b_next_month">Next month</string>
    <string name="b_last_month">Last month</string>
    <string name="b_back_action">Back</string>
    <string name="b_percent_placeholder">30,5%</string>
    <string name="b_amount_placeholder">$200.00</string>
    <string name="b_share_calc_placeholder">$200.00</string>
    <string name="b_total_placeholder">$18.000</string>
    <string name="b_month_placeholder">August</string>
    <string name="b_month_short_placeholder">Aug</string>
    <string name="b_year_placeholder">2016</string>
    <string name="b_balance">Balance</string>
    <string name="b_balance_placeholder">$2.000</string>
    <string name="b_budget">Budget</string>
    <string name="b_budget_placeholder">$20.000</string>
    <string name="b_percent">%</string>
    <string name="b_category">CATEGORY</string>
    <string name="b_user">USER</string>
    <string name="b_date">DATE</string>
    <string name="b_icon_description">Expense Group Icon</string>
    <string name="b_month_january">January</string>
    <string name="b_month_february">February</string>
    <string name="b_month_march">March</string>
    <string name="b_month_april">April</string>
    <string name="b_month_may">May</string>
    <string name="b_month_june">June</string>
    <string name="b_month_july">July</string>
    <string name="b_month_august">August</string>
    <string name="b_month_september">September</string>
    <string name="b_month_october">October</string>
    <string name="b_month_november">November</string>
    <string name="b_month_december">December</string>
    <string name="b_short_month_january">Jan</string>
    <string name="b_short_month_february">Feb</string>
    <string name="b_short_month_march">Mar</string>
    <string name="b_short_month_april">Apr</string>
    <string name="b_short_month_may">May</string>
    <string name="b_short_month_june">Jun</string>
    <string name="b_short_month_july">Jul</string>
    <string name="b_short_month_august">Aug</string>
    <string name="b_short_month_september">Sep</string>
    <string name="b_short_month_october">Oct</string>
    <string name="b_short_month_november">Nov</string>
    <string name="b_short_month_december">Dec</string>
    <string name="e_category_description">Category image</string>
    <string name="e_category_car">Car</string>
    <string name="e_category_travel">Travel</string>
    <string name="e_category_food">Food</string>
    <string name="e_category_family">Family</string>
    <string name="e_category_bills">Bills</string>
    <string name="e_category_entertainment">Entertainment</string>
    <string name="e_category_home">Home</string>
    <string name="e_category_gifts">Gifts</string>
</resources>