<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Theme.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/ue_icon_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:contentDescription="@string/ue_icon_description"
        android:src="@drawable/category_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ue_category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/ue_category_placeholder"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/ue_date_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/ue_date_placeholder"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:text="@string/ue_currency"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/ue_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:text="@string/ue_amount_placeholder"
        android:textColor="@color/black"
        android:textSize="22sp" 
        android:padding="5dp"/>

</LinearLayout>