<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seablue"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/pef_filter_description"
            android:src="@drawable/ic_filter_white_18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pef_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shape_toolbar_dropshadow" />

    <LinearLayout
        android:id="@+id/pef_top_month_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/pef_left_arrow_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_triangle_left"
                android:contentDescription="@string/b_last_month" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/pef_monthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_month_placeholder"
                android:textColor="@color/seablue"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/pef_yearTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_year_placeholder"
                android:textColor="@color/hard_grey"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pef_right_arrow_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/shape_triangle_right"
                android:contentDescription="@string/b_next_month" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>