<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/seablue"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/aaq_question_description"
            android:src="@drawable/ic_question_18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/aaq_questions"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shape_toolbar_dropshadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="visible" >

        <EditText
            android:id="@+id/aaq_message_EditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_bordered_rectangle"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:gravity="top|start"
            android:padding="5dp"
            android:hint="@string/aaq_question_hint" >
        </EditText>

        <Button
            android:id="@+id/aaq_send_button"
            style="@style/Button"
            android:layout_marginTop="15dp"
            android:text="@string/aaq_send" />
    </LinearLayout>

</LinearLayout>