<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangle"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/seablue"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/li_forgot_password"
            android:src="@drawable/ic_account_key_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/li_password_reset"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/shape_toolbar_dropshadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/fp_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <EditText
                android:id="@+id/fp_email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape_bordered_rectangle"
                android:gravity="top|start"
                android:hint="@string/li_email_hint"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" >
            </EditText>

            <Button
                android:id="@+id/fp_reset_password_button"
                style="@style/Button"
                android:layout_marginTop="15dp"
                android:text="@string/li_reset_password" />
        </LinearLayout>

        <TextView
            android:id="@+id/fp_reset_success_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:drawableTop="@drawable/ic_send_36dp"
            android:text="@string/li_password_reset_sent"
            android:textColor="@color/hard_grey"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>